--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -15,10 +15,10 @@ height: 100%;
 margin: 0 auto;
 }
 
-/*Well, at least the images are the right size.*/
+/*Well, at least the images are the right size?*/
 
 img{
 
-height: 100px;
-width: 100px;
+height: 125x;
+width: 125px;
 }
